test/spec_vectors/simd_load_splat/fail/module_11.wat
(module (memory 0) (func $v128.load16_splat-arg-empty (result v128) (v128.load16_splat)))